<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9EADBBF"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/Delete_ID"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#73440A"
        android:text="Delete Record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="CradiacRecorder"

        android:backgroundTint="#73440A"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="317dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:text="Keep Track of Your Health"

        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/view_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/view_button"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="83dp"
        android:backgroundTint="#73440A"
        android:onClick=" SwitchToView()"
        android:text="View Record"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.464"
        tools:ignore="MissingConstraints,OnClick" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#73440A"
        android:gravity="center"
        android:onClick=" SwitchToAdd()"
        android:text="Add Record"
        app:layout_constraintBottom_toTopOf="@+id/Delete_ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        tools:ignore="MissingConstraints,OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/update_id"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="Update"
        android:backgroundTint="#73440A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Delete_ID" />

</androidx.constraintlayout.widget.ConstraintLayout>