...
        android:text="Date is :"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_contactNumber"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="115dp"
        android:layout_height="37dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="208dp"
...
